--- a/web/index.template.html
+++ b/web/index.template.html
@@ -2,6 +2,6 @@
 <html>
   <head><meta charset="utf-8"><title>Simple App</title></head>
   <body>
-    <h1>My name is {{NAME}}</h1>
+    <h1>This is first {{NAME}}</h1>
   </body>
 </html>
